RESOLVED FIXED265767
[WPE] Fix missing initializer warning for member wl_pointer_listener::axis_relative_direction and related issues
https://bugs.webkit.org/show_bug.cgi?id=265767
Summary [WPE] Fix missing initializer warning for member wl_pointer_listener::axis_re...
Lauro Moura
Reported 2023-12-03 16:52:48 PST
app/webkit/Source/WebKit/WPEPlatform/wpe/wayland/WPEWaylandSeat.cpp:267:1: warning: missing initializer for member ‘wl_pointer_listener::axis_relative_direction’ [-Wmissing-field-initializers] 267 | }; | ^ On a manual build outside flatpak, it also failed, but complaining about too many initializers to wl_surface_listener. 271427@main added an axis_relative_direction slot, but to wl_surface_listener instead of the `wl_pointer_listener` one, 265775@main. .../Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:223:1: error: too many initializers for 'const wl_surface_listener' 223 | namespace std | ^ Patch incoming.
Attachments
Lauro Moura
Comment 1 2023-12-03 17:09:34 PST
EWS
Comment 2 2023-12-04 08:15:26 PST
Committed 271479@main (b9f2021a494c): <https://commits.webkit.org/271479@main> Reviewed commits have been landed. Closing PR #21246 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.