[WPE] Fix missing initializer warning for member wl_pointer_listener::axis_relative_direction and related issues https://bugs.webkit.org/show_bug.cgi?id=265767

Reviewed by Michael Catanzaro and Žan Doberšek.

Move axis_relative_direction from wl_surface_listener to wl_pointer_listener

* Source/WebKit/WPEPlatform/wpe/wayland/WPEViewWayland.cpp:
* Source/WebKit/WPEPlatform/wpe/wayland/WPEWaylandSeat.cpp:

Canonical link: https://commits.webkit.org/271479@main